# Manhwa

./: .continue-here.md  .gitignore  CLAUDE.md  capture_chapter.py  pyproject.toml  requirements-eval.lock.txt  requirements-kokoro.lock.txt  requirements-qwen.lock.txt  studio.toml
docs/: 2026-06-30-manhwa-fresh-vs-current-audit.md
manhwa-cropper/: requirements.txt
remotion/: .gitignore  package-lock.json  package.json  remotion.config.ts  tsconfig.json
scripts/: bootstrap_mac.sh
studio/: README.md  __main__.py  cli.py  config.py  paths.py  pipeline.py  qa.py  qa_flags.py  worker.py
tests/: conftest.py  test_b1_glob.py  test_b2_segment_id.py  test_b3_relpaths.py  test_beats_segments.py  test_blender_timing.py  test_cast_tokens.py  test_chunk_stitch_cap.py  test_cli.py  test_config_narration.py  test_config_teaser.py  test_fetch_completeness.py  test_flow_e2e.py  test_gemini_niche.py  test_intensity_calibration.py  test_live_smoke.py  test_local_tts.py  test_local_tts_timeout.py  test_manifest_freshness.py  test_meta_garbage_narration.py  test_narration_accept_better.py  test_narration_consistency.py  test_narration_heal.py  test_narration_punchup.py  test_narration_punchup_persona.py  test_narration_repetition.py  test_narration_sanitize_pass.py  test_narrative_quality.py  test_narrative_segments.py  test_niche_modules.py  test_ocr_chrome.py  test_ocr_garbage_scrub.py  test_ollama_compat.py  test_overlap_dedupe.py  test_oversegmentation.py  test_panel_narration.py  test_panel_understand.py  test_panel_understand_chrome.py  test_panels_to_scenes_recovery.py  (+42 more)
(+213 files in other folders)
